--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE HTML>
 <head>
-<title>UNC Charlotte</title>
+<title>University Admission Inc.</title>
 
 <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	  		</div> 
        <div class="content">
 		      <div class="content_bottom">
-		      	<h2>UNC Charlotte is on YouTube</h2>
+		      	<h2>UA Charlotte is on YouTube</h2>
                 <iframe width="100%" height="271" src="https://www.youtube.com/embed/pnQZ5tQD8tg?list=PL6081D117FF54FF7A" frameborder="0" allowfullscreen></iframe><br/>
 		      	<p style="text-align: justify;">A new study by UNC Charlotte scholars is shedding light on the connection between diet and a common childhood disease.
 
