--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>UNC Charlotte</title>
+	<title>University Admission Inc.</title>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -51,7 +51,7 @@
 				</div>
 				<div class="menu">
 					<ul>
-						<li id="Home"><a href="index.html">Home</a></li>
+						<li id="Home"><a href="index.html">Intake 2019</a></li>
                         <li id="My Profile"><a href="profile.html">My Profile</a></li>
 						<li id="Faculty"><a href="faculty.html">Faculty</a></li>
 						<li id="Programs"><a href="programs.html">Programs</a></li>
